GPencil Weights shift when the Points are changed in Edit Mode #67811

Closed
opened 2019-07-27 20:26:46 +02:00 by Michael Hermann · 4 comments

System Information
Operating system: Linux-5.2.2-arch1-1-ARCH-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: 79ce2054d4
Worked: (optional)

Short description of error
See this very short demo:

Blender_GreasePencil_Weights.mp4

This can be very problematic when you have a rigged GP-Object and need to make adjustments because it didn't deform well. (Can be tricky to get right.

The expected behavior
All the points that are kept, keep their values unchanged

Exact steps for others to reproduce the error

  1. Add Grease Pencil Object.
  2. Paint
  3. Edit the weights in Weight Paint Mode
  4. Change the points in Edit Mode (delete or add)
  5. Compare original weights and Weights after the operation in Edit Mode
**System Information** Operating system: Linux-5.2.2-arch1-1-ARCH-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: `79ce2054d4` Worked: (optional) **Short description of error** See this very short demo: [Blender_GreasePencil_Weights.mp4](https://archive.blender.org/developer/F7632230/Blender_GreasePencil_Weights.mp4) This can be very problematic when you have a rigged GP-Object and need to make adjustments because it didn't deform well. (Can be tricky to get right. **The expected behavior** All the points that are kept, keep their values unchanged **Exact steps for others to reproduce the error** 1. Add Grease Pencil Object. 2. Paint 3. Edit the weights in Weight Paint Mode 4. Change the points in Edit Mode (delete or add) 5. Compare original weights and Weights after the operation in Edit Mode

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann
Antonio Vazquez self-assigned this 2019-07-27 23:16:34 +02:00

This issue was referenced by 60d71ffbe9

This issue was referenced by 60d71ffbe99395bbfeed1eb0504b8f52eb84a827
Antonio Vazquez changed title from Grease Pencil Weights shift when the Points are changed in Edit Mode to GPencil Weights shift when the Points are changed in Edit Mode 2019-07-28 11:32:29 +02:00

@MichaelHermann I have the fix for this too... the same reason I cannot commit of #67813

@MichaelHermann I have the fix for this too... the same reason I cannot commit of #67813

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67811
No description provided.