Fix T67811: GPencil Weights shift when use dissolve in Edit Mode

The problem was the index was not right calculated for unselected points.